trunk/Archive2/4b/5eb0e97cad9eee/output
main.cpp:1:20: error: extra tokens at end of #include directive
  #include <vector> #include <vector>
                    ^
main.cpp:2:21: error: extra tokens at end of #include directive
 #include <iostream> # include <iostream>
                     ^
main.cpp:6:5: error: stray '\303' in program
     std:: vector < int > numbers ; std :: vector <int> números;
     ^
main.cpp:6:5: error: stray '\272' in program
main.cpp:8:6: error: stray '\303' in program
      numbers. push_back ( 42 ) ; push_back números (42).;
      ^
main.cpp:8:6: error: stray '\272' in program
main.cpp:9:5: error: stray '\303' in program
     numbers. push_back ( 314159 ) ; números push_back (314.159).; 
     ^
main.cpp:9:5: error: stray '\272' in program
main.cpp:12:28: warning: multi-character character constant [-Wmultichar]
         std:: cout << i << ' \n ' ; std :: cout << i << '\ n';
                            ^
main.cpp:12:57: error: unknown escape sequence: '\040'
         std:: cout << i << ' \n ' ; std :: cout << i << '\ n';
                                                         ^
main.cpp:12:57: warning: multi-character character constant [-Wmultichar]
main.cpp:4:14: error: expected initializer before 'int'
 int main ( ) int main ()
              ^
